@@ -241,7 +241,8 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 16760) Add CSS-class to action links of Special:Log
 * (bug 505) Time zones can now be specified by location in user preferences,
   avoiding the need to manually update for DST. Patch by Brad Jorsch.
-
+* (bug 2585) HTTP 404 return code is now given for a page view if the page
+  does not exist, allowing spiders and link checkers to detect broken links.
 
 === Bug fixes in 1.14 ===
 
